Description added to HTML
Meta element with description added to index.html.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="Stefan Korecko" />
+    <meta
+      name="description"
+      content="Dynamic blog demo for Web Technologies course at DCI FEEI TUKE in 2020."
+    />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/treesBlog.css" media="screen" />
 
