edied html and changed sandbox name.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
         </figure>
         <p>
           Oak is a deciduous tree with hardwood. It lives long and grows slowly.
-          Its leaves are simple, lobate and fall off before the winter.
+          Its leaves are simple, lobate and fall off before the winter. It
+          belongs to the genus Quercus.
         </p>
         <footer class="menuLink">
           <a href="#menuTitle">Back to the menu</a>
